# django-fernet-fields

./: .pypirc  README.rst  pyproject.toml
.github/: dependabot.yml  gitversion.yml  pull_request_template.md
.github/workflows/: publish.yml
fernet_fields/: fields.py
