[tool.poetry]
name = "cav-django-fernet-fields"
version = "0.1.0"
description = "Fernet-encrypted model fields for Django"
authors = ["Brian Werth <brian.werth@Cavallo.com>"]
license = "BSD-3"
packages = [{include = "fernet_fields"}]
include = [
    "fernet_fields"
]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
pytest = "^7.1"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
